FOF 3.4.0
================================================================================
~ Changed package format to "files" due to Joomla failing to prevent downgrades on "library" packages
# [HIGH] IP helper returns the IPv4-embedded-in-IPv6 address (::ffff:192.168.0.1 or 0:0:0:0:0:fff:192.168.0.1) instead of the unwrapped IPv4 address, making IP matching impossible.

FOF 3.3.9
================================================================================
# [HIGH] Download: Some cURL versions return lowercase headers, making redirection detection impossible

FOF 3.3.8
================================================================================
# [LOW] Notice thrown from the cURL download adapter when there are empty header lines or lines without a colon

FOF 3.3.7
================================================================================
# [MEDIUM] Defend against Joomla! returning null values for pagination parameters, causing an exception
# [LOW] Warning from the Ip helper under CLI or when REMOTE_ADDR is not defined by the server (part 2)
# [LOW] Untranslated string in the Sort By drop-downs

FOF 3.3.6
================================================================================
+ DynamicGroups helper
+ gh-616 CLI application abstraction
~ Work around LiteSpeed sending compressed output under HTTP/2 when no Accept-Encoding is specified in the request
# [LOW] Warning from the Ip helper under CLI or when REMOTE_ADDR is not defined by the server

FOF 3.3.5
================================================================================
! The mere existence getGenerator method causes a fatal error in DataModel on PHP 5.3 and 5.4. Pulled out into a Trait.

FOF 3.3.4
================================================================================
# [HIGH] Saving or cancelling the edit of an item with an 'access' field leaked the item's access as a filter value in the Browse view
# [MEDIUM] DataController's defaultsForAdd didn't do anything