@@ -21,10 +21,14 @@ defined('_JEXEC') or die;
  * linkbar_style        Style for linkbars: joomla3|classic. Default: joomla3
  * load_fef             Load FEF CSS and JS? Set to false if you are loading it outside the renderer. Default: true
  * fef_reset            Should I reset the CSS styling for basic HTML elements inside the FEF container? Default: true
+ * fef_dark             Should I load the FEF Dark Mode CSS and supporting JS? Default: false
  * custom_css           Comma-separated list of custom CSS files to load _after_ the main FEF CSS file, e.g.
  *                      media://com_foo/css/bar.min.css,media://com_foo/css/baz.min.css
  * remove_wrapper_classes  Comma-separated list of classes to REMOVE from the container
  * add_wrapper_classes     Comma-separated list of classes to ADD to the container
+ *
+ * Note: when Dark Mode is enabled the class akeeba-renderer-fef--dark is applied to the container DIV. You can use
+ * remove_wrapper_classes to remove it e.g. when you want it to be enabled only through a JavaScript-powered toggle.
  *
  * @package FOF30\Render
  */
@@ -55,12 +59,19 @@ class FEF extends Joomla3
 	 */
 	public function preRender($view, $task)
 	{
-		$useReset = $this->getOption('fef_reset', true);
-		$useFEF = $this->getOption('load_fef', true);
+		$useReset    = $this->getOption('fef_reset', true);
+		$useFEF      = $this->getOption('load_fef', true);
+		$useDarkMode = $this->getOption('fef_dark', false);
 
-		if ($useFEF)
+		if ($useFEF && class_exists('AkeebaFEFHelper'))
 		{
 			\AkeebaFEFHelper::load($useReset);
+
+			if ($useDarkMode)
+			{
+				$this->container->template->addCSS('media://fef/css/dark.min.css');
+				$this->container->template->addJS('media://fef/js/darkmode.min.js');
+			}
 		}
 
 		$this->loadCustomCss();
@@ -78,6 +89,13 @@ class FEF extends Joomla3
 	 */
 	protected function openPageWrapper($classes)
 	{
+		$useDarkMode = $this->getOption('fef_dark', false);
+
+		if ($useDarkMode && !in_array('akeeba-renderer-fef--dark', $classes))
+		{
+			$classes[] = 'akeeba-renderer-fef--dark';
+		}
+
 		/**
 		 * Remove wrapper classes. By default these are classes for the Joomla 3 sidebar which is not used in FEF
 		 * components anymore.
